use slim version of jdk 17