@@ -1,16 +1,22 @@
 FROM maven:3.8.3-openjdk-17-slim AS build
 WORKDIR /app
 
-# Copy only the necessary files to reduce the context size
-COPY pom.xml .
-COPY src ./src
+# Copy the project files and build the application
+COPY . .
+RUN mvn clean package -DskipTests
 
-# Build the application
-RUN mvn clean install -DskipTests
+# Create a custom JRE with the necessary modules
+FROM openjdk:17-slim AS jre-builder
+RUN jlink --module-path /opt/java/openjdk/jmods \
+          --add-modules java.base,java.logging,java.desktop \
+          --output /custom-jre
 
-# Use a minimal base image for the runtime
-FROM openjdk:17-jdk-slim
+# Create the final image
+FROM debian:bullseye-slim
 WORKDIR /app
+
+# Copy the custom JRE from the jre-builder stage
+COPY --from=jre-builder /custom-jre /opt/java/custom-jre
 
 # Copy the built JAR file from the build stage
 COPY --from=build /app/target/set-card-game-server.jar /app/app.jar
@@ -18,5 +24,5 @@ COPY --from=build /app/target/set-card-game-server.jar /app/app.jar
 # Expose the application port
 EXPOSE 8080
 
-# Run the application
-ENTRYPOINT ["java", "-jar", "app.jar"]
+# Run the application using the custom JRE
+ENTRYPOINT ["/opt/java/custom-jre/bin/java", "-jar", "app.jar"]
